ext/standard/url_parser_ex.c
/* Generated by re2c 0.16 */
#line 1 "ext/standard/url_parser_ex.re"
/*
   +----------------------------------------------------------------------+
   | PHP Version 7                                                        |
   +----------------------------------------------------------------------+
   | Copyright (c) 1997-2016 The PHP Group                                |
   +----------------------------------------------------------------------+
   | This source file is subject to version 3.01 of the PHP license,      |
   | that is bundled with this package in the file LICENSE, and is        |
   | available through the world-wide-web at the following url:           |
   | http://www.php.net/license/3_01.txt                                  |
   | If you did not receive a copy of the PHP license and are unable to   |
   | obtain it through the world-wide-web, please send a note to          |
   | license@php.net so we can mail you a copy immediately.               |
   +----------------------------------------------------------------------+
 */

/**
 * Url Parser used from https://github.com/staskobzar/url_parser_re2c
 * Licensed under MIT License.
 *
 * Modified for more correct RFC 3986 requirements & PHP
 */

#include <stdlib.h>
#include <signal.h>
#include <string.h>
#include <ctype.h>
#include <sys/types.h>

#include "php.h"
#include "url.h"
#include "url_parser_ex.h"

ZEND_DECLARE_MODULE_GLOBALS(url)

/* Since YYMARKER increments on wildcards, we'll track ourselves. */
const char *marker;
const char *YYMARKER;

char* get_token(int len)
{
    char *res = (char *) emalloc (len + 1);
    int i = 0;
    for (; i < len; i++) res[i] = marker[i];
    res[i] = '\0';
    return res;
}

#line 64 "ext/standard/url_parser_ex.re"


int url_parse_scheme(php_url *url)
{
    marker = URLG(url_str);

#line 59 "ext/standard/url_parser_ex.c"
{
	unsigned char yych;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0, 128, 128, 128, 128,   0, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128,   0,   0,   0,   0,   0,   0, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0,   0,   0, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	yych = *(YYMARKER = URLG(url_str));
	if (yych <= 'Z') {
		if (yych <= 0x00) goto yy3;
		if (yych >= 'A') goto yy5;
	} else {
		if (yych <= '`') goto yy2;
		if (yych <= 'z') goto yy5;
	}
yy2:
#line 73 "ext/standard/url_parser_ex.re"
	{ return 0; }
#line 107 "ext/standard/url_parser_ex.c"
yy3:
	++URLG(url_str);
#line 72 "ext/standard/url_parser_ex.re"
	{ URLG(url_str)--; return 0; }
#line 112 "ext/standard/url_parser_ex.c"
yy5:
	++URLG(url_str);
	yych = *URLG(url_str);
	if (yybm[0+yych] & 128) {
		goto yy5;
	}
	if (yych <= '/') goto yy7;
	if (yych <= ':') goto yy8;
yy7:
	URLG(url_str) = YYMARKER;
	goto yy2;
yy8:
	++URLG(url_str);
#line 74 "ext/standard/url_parser_ex.re"
	{
        int len = URLG(url_str) - marker - 1;
        url->scheme = get_token(len);
        return 1;
    }
#line 132 "ext/standard/url_parser_ex.c"
}
#line 79 "ext/standard/url_parser_ex.re"

}

int url_parse_authority_userinfo (php_url *url)
{
    marker = URLG(url_str);

#line 142 "ext/standard/url_parser_ex.c"
{
	unsigned char yych;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0, 128,   0,   0, 128,   0, 128, 128, 
		128, 128, 128, 128, 128, 128, 128,   0, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128,   0, 128,   0,   0, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0,   0, 128, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128,   0,   0,   0, 128,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	yych = *(YYMARKER = URLG(url_str));
	if (yybm[0+yych] & 128) {
		goto yy15;
	}
	if (yych <= '%') {
		if (yych <= 0x00) goto yy13;
		if (yych >= '$') goto yy18;
	} else {
		if (yych == '@') goto yy19;
	}
yy12:
#line 89 "ext/standard/url_parser_ex.re"
	{ return 0; }
#line 192 "ext/standard/url_parser_ex.c"
yy13:
	++URLG(url_str);
#line 88 "ext/standard/url_parser_ex.re"
	{ URLG(url_str)--; return 0; }
#line 197 "ext/standard/url_parser_ex.c"
yy15:
	++URLG(url_str);
	yych = *URLG(url_str);
	if (yybm[0+yych] & 128) {
		goto yy15;
	}
	if (yych <= '#') goto yy17;
	if (yych <= '%') goto yy18;
	if (yych == '@') goto yy19;
yy17:
	URLG(url_str) = YYMARKER;
	goto yy12;
yy18:
	++URLG(url_str);
	yych = *URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy17;
		if (yych <= '9') goto yy21;
		goto yy17;
	} else {
		if (yych <= 'F') goto yy21;
		if (yych <= '`') goto yy17;
		if (yych <= 'f') goto yy21;
		goto yy17;
	}
yy19:
	++URLG(url_str);
#line 90 "ext/standard/url_parser_ex.re"
	{
        int len = 0;
        len = URLG(url_str) - marker;

        char* split = memchr(marker, ':', len);
        if (split && split < URLG(url_str)) {
            len = split - marker;
            if (len > 0) url->user = get_token(len);
            marker += len + 1;
            len = URLG(url_str) - split - 2;
            if (len > 0) url->pass = get_token(len);
            return 1;
        } else {
            int len = URLG(url_str) - marker - 1;
            if (len > 0) url->user = get_token(len);
            return 1;
        }
    }
#line 244 "ext/standard/url_parser_ex.c"
yy21:
	++URLG(url_str);
	yych = *URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy17;
		if (yych <= '9') goto yy15;
		goto yy17;
	} else {
		if (yych <= 'F') goto yy15;
		if (yych <= '`') goto yy17;
		if (yych <= 'f') goto yy15;
		goto yy17;
	}
}
#line 108 "ext/standard/url_parser_ex.re"

}

int url_parse_authority_host (php_url *url)
{
    marker = URLG(url_str);

#line 267 "ext/standard/url_parser_ex.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,  80,   0,   0,  80,   0,  80,  80, 
		 80,  80,  80,  80,  80,  80,  80,   0, 
		240, 240, 240, 240, 240, 240, 240, 240, 
		240, 240,  64,  80,   0,  80,   0,   0, 
		  0, 240, 240, 240, 240, 240, 240, 208, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208, 208,   0,   0,   0,   0,  80, 
		  0, 240, 240, 240, 240, 240, 240, 208, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208, 208, 208, 208, 208, 208, 208, 
		208, 208, 208,   0,   0,   0,  80,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	yych = *(YYMARKER = URLG(url_str));
	if (yybm[0+yych] & 16) {
		goto yy27;
	}
	if (yych <= '%') {
		if (yych <= 0x00) goto yy25;
		if (yych >= '$') goto yy30;
	} else {
		if (yych <= '@') goto yy24;
		if (yych <= '[') goto yy32;
	}
yy24:
#line 137 "ext/standard/url_parser_ex.re"
	{ return 0; }
#line 319 "ext/standard/url_parser_ex.c"
yy25:
	++URLG(url_str);
#line 136 "ext/standard/url_parser_ex.re"
	{ URLG(url_str) = marker; return 0; }
#line 324 "ext/standard/url_parser_ex.c"
yy27:
	yyaccept = 1;
	YYMARKER = ++URLG(url_str);
	yych = *URLG(url_str);
	if (yybm[0+yych] & 16) {
		goto yy27;
	}
	if (yych <= '#') goto yy29;
	if (yych <= '%') goto yy30;
yy29:
#line 138 "ext/standard/url_parser_ex.re"
	{
        goto host;
    }
#line 339 "ext/standard/url_parser_ex.c"
yy30:
	++URLG(url_str);
	yych = *URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy33;
	} else {
		if (yych <= 'F') goto yy33;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy33;
	}
yy31:
	URLG(url_str) = YYMARKER;
	if (yyaccept == 0) {
		goto yy24;
	} else {
		goto yy29;
	}
yy32:
	yych = *++URLG(url_str);
	if (yych <= 'F') {
		if (yych <= '9') {
			if (yych <= '/') goto yy31;
			goto yy34;
		} else {
			if (yych <= ':') goto yy35;
			if (yych <= '@') goto yy31;
			goto yy34;
		}
	} else {
		if (yych <= 'f') {
			if (yych <= '`') goto yy31;
			if (yych <= 'e') goto yy34;
			goto yy36;
		} else {
			if (yych == 'v') goto yy37;
			goto yy31;
		}
	}
yy33:
	++URLG(url_str);
	yych = *URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy27;
		goto yy31;
	} else {
		if (yych <= 'F') goto yy27;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy27;
		goto yy31;
	}
yy34:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy38;
		if (yych <= ':') goto yy39;
		goto yy31;
	} else {
		if (yych <= 'F') goto yy38;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy38;
		goto yy31;
	}
yy35:
	yych = *++URLG(url_str);
	if (yych == ':') goto yy40;
	goto yy31;
yy36:
	yych = *++URLG(url_str);
	if (yych <= 'F') {
		if (yych <= '9') {
			if (yych <= '/') goto yy31;
			goto yy38;
		} else {
			if (yych <= ':') goto yy39;
			if (yych <= '@') goto yy31;
			goto yy38;
		}
	} else {
		if (yych <= 'd') {
			if (yych <= '`') goto yy31;
			goto yy38;
		} else {
			if (yych <= 'e') goto yy41;
			if (yych <= 'f') goto yy38;
			goto yy31;
		}
	}
yy37:
	yych = *++URLG(url_str);
	if (yych == '.') goto yy31;
	goto yy43;
yy38:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy44;
		if (yych >= ';') goto yy31;
	} else {
		if (yych <= 'F') goto yy44;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy44;
		goto yy31;
	}
yy39:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy45;
		if (yych <= ':') goto yy46;
		goto yy31;
	} else {
		if (yych <= 'F') goto yy45;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy45;
		goto yy31;
	}
yy40:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '1') {
			if (yych <= '/') goto yy31;
			if (yych <= '0') goto yy47;
			goto yy48;
		} else {
			if (yych <= '2') goto yy49;
			if (yych <= '9') goto yy50;
			goto yy31;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy51;
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'e') goto yy51;
			if (yych <= 'f') goto yy54;
			goto yy31;
		}
	}
yy41:
	yych = *++URLG(url_str);
	if (yych <= ':') {
		if (yych <= '7') {
			if (yych <= '/') goto yy31;
			goto yy44;
		} else {
			if (yych <= '8') goto yy55;
			if (yych <= '9') goto yy44;
			goto yy39;
		}
	} else {
		if (yych <= 'F') {
			if (yych <= '@') goto yy31;
			goto yy44;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy44;
			goto yy31;
		}
	}
yy42:
	++URLG(url_str);
	yych = *URLG(url_str);
yy43:
	if (yybm[0+yych] & 32) {
		goto yy42;
	}
	if (yych == '.') goto yy56;
	goto yy31;
yy44:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy57;
		if (yych <= ':') goto yy39;
		goto yy31;
	} else {
		if (yych <= 'F') goto yy57;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy57;
		goto yy31;
	}
yy45:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy58;
		if (yych <= ':') goto yy59;
		goto yy31;
	} else {
		if (yych <= 'F') goto yy58;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy58;
		goto yy31;
	}
yy46:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '1') {
			if (yych <= '/') goto yy31;
			if (yych <= '0') goto yy60;
			goto yy61;
		} else {
			if (yych <= '2') goto yy62;
			if (yych <= '9') goto yy63;
			goto yy31;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy64;
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy64;
			goto yy31;
		}
	}
yy47:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') {
			if (yych == '.') goto yy65;
			goto yy31;
		} else {
			if (yych <= '9') goto yy66;
			if (yych <= ':') goto yy67;
			goto yy31;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy66;
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy66;
			goto yy31;
		}
	}
yy48:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') {
			if (yych == '.') goto yy65;
			goto yy31;
		} else {
			if (yych <= '9') goto yy68;
			if (yych <= ':') goto yy67;
			goto yy31;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy66;
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy66;
			goto yy31;
		}
	}
yy49:
	yych = *++URLG(url_str);
	if (yych <= ':') {
		if (yych <= '/') {
			if (yych == '.') goto yy65;
			goto yy31;
		} else {
			if (yych <= '4') goto yy68;
			if (yych <= '5') goto yy69;
			if (yych <= '9') goto yy70;
			goto yy67;
		}
	} else {
		if (yych <= '\\') {
			if (yych <= '@') goto yy31;
			if (yych <= 'F') goto yy66;
			goto yy31;
		} else {
			if (yych <= ']') goto yy52;
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy66;
			goto yy31;
		}
	}
yy50:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') {
			if (yych == '.') goto yy65;
			goto yy31;
		} else {
			if (yych <= '9') goto yy70;
			if (yych <= ':') goto yy67;
			goto yy31;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy66;
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy66;
			goto yy31;
		}
	}
yy51:
	yych = *++URLG(url_str);
	if (yych <= 'F') {
		if (yych <= '9') {
			if (yych <= '/') goto yy31;
			goto yy66;
		} else {
			if (yych <= ':') goto yy67;
			if (yych <= '@') goto yy31;
			goto yy66;
		}
	} else {
		if (yych <= ']') {
			if (yych <= '\\') goto yy31;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy66;
			goto yy31;
		}
	}
yy52:
	++URLG(url_str);
#line 141 "ext/standard/url_parser_ex.re"
	{
        goto host;
    }
#line 678 "ext/standard/url_parser_ex.c"
yy54:
	yych = *++URLG(url_str);
	if (yych <= 'F') {
		if (yych <= '9') {
			if (yych <= '/') goto yy31;
			goto yy66;
		} else {
			if (yych <= ':') goto yy67;
			if (yych <= '@') goto yy31;
			goto yy66;
		}
	} else {
		if (yych <= '`') {
			if (yych == ']') goto yy52;
			goto yy31;
		} else {
			if (yych <= 'e') goto yy66;
			if (yych <= 'f') goto yy71;
			goto yy31;
		}
	}
yy55:
	yych = *++URLG(url_str);
	if (yych <= ':') {
		if (yych <= '/') goto yy31;
		if (yych <= '0') goto yy72;
		if (yych <= '9') goto yy57;
		goto yy39;
	} else {
		if (yych <= 'F') {
			if (yych <= '@') goto yy31;
			goto yy57;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy57;
			goto yy31;
		}
	}
yy56:
	yych = *++URLG(url_str);
	if (yych == ']') goto yy31;
	goto yy74;
yy57:
	yych = *++URLG(url_str);
	if (yych == ':') goto yy39;
	goto yy31;
yy58:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy75;
		if (yych >= ';') goto yy31;
	} else {
		if (yych <= 'F') goto yy75;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy75;
		goto yy31;
	}
yy59:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') goto yy31;
		if (yych <= '9') goto yy76;
		if (yych <= ':') goto yy77;
		goto yy31;
	} else {
		if (yych <= 'F') goto yy76;
		if (yych <= '`') goto yy31;
		if (yych <= 'f') goto yy76;
		goto yy31;
	}
yy60:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') {
			if (yych == '.') goto yy65;
			goto yy31;
		} else {
			if (yych <= '9') goto yy78;
			if (yych <= ':') goto yy79;
			goto yy31;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy78;
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy78;
			goto yy31;
		}
	}
yy61:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') {
			if (yych == '.') goto yy65;
			goto yy31;
		} else {
			if (yych <= '9') goto yy80;
			if (yych <= ':') goto yy79;
			goto yy31;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy78;
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy78;
			goto yy31;
		}
	}
yy62:
	yych = *++URLG(url_str);
	if (yych <= ':') {
		if (yych <= '/') {
			if (yych == '.') goto yy65;
			goto yy31;
		} else {
			if (yych <= '4') goto yy80;
			if (yych <= '5') goto yy81;
			if (yych <= '9') goto yy82;
			goto yy79;
		}
	} else {
		if (yych <= '\\') {
			if (yych <= '@') goto yy31;
			if (yych <= 'F') goto yy78;
			goto yy31;
		} else {
			if (yych <= ']') goto yy52;
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy78;
			goto yy31;
		}
	}
yy63:
	yych = *++URLG(url_str);
	if (yych <= '@') {
		if (yych <= '/') {
			if (yych == '.') goto yy65;
			goto yy31;
		} else {
			if (yych <= '9') goto yy82;
			if (yych <= ':') goto yy79;
			goto yy31;
		}
	} else {
		if (yych <= ']') {
			if (yych <= 'F') goto yy78;
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy78;
			goto yy31;
		}
	}
yy64:
	yych = *++URLG(url_str);
	if (yych <= 'F') {
		if (yych <= '9') {
			if (yych <= '/') goto yy31;
			goto yy78;
		} else {
			if (yych <= ':') goto yy79;
			if (yych <= '@') goto yy31;
			goto yy78;
		}
	} else {
		if (yych <= ']') {
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'f') goto yy78;
			goto yy31;
		}
	}
yy65:
	yych = *++URLG(url_str);
	if (yych <= '1') {
		if (yych <= '/') goto yy31;
		if (yych <= '0') goto yy83;
		goto yy84;
	} else {
		if (yych <= '2') goto yy85;
		if (yych <= '9') goto yy86;
		goto yy31;
	}
yy66:
	yych = *++URLG(url_str);
	if (yych <= 'F') {
		if (yych <= '9') {
			if (yych <= '/') goto yy31;
			goto yy87;
		} else {
			if (yych <= ':') goto yy67;
			if (yych <= '@') goto yy31;
			goto yy87;
		}
	} else {
		if (yych <= ']') {
			if (yych <= '\\') goto yy31;
			goto yy52;
		} else {
			if (yych <= '`') goto yy31;
